tests/baselines/reference/project/defaultExcludeNodeModulesAndOutDirWithAllowJS/node/defaultExcludeNodeModulesAndOutDirWithAllowJS.errors.txt
tsconfig.json(2,5): error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== tsconfig.json (1 errors) ====
    { 
        "compilerOptions": {
        ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
            "outDir": "OutDir",
            "allowJs": true
        }
    }
==== a.ts (0 errors) ====
    var test = 10;